# x2-colon

./: README.md  package.json
apps/frontend/: README.md  pnpm-lock.yaml
apps/frontend/src/routes/: +layout.svelte
apps/server/: Cargo.toml
apps/server/api/: main.rs
apps/server/src/: parser.rs
